--- a/module08_correlation_analysis.Rmd
+++ b/module08_correlation_analysis.Rmd
@@ -1,12 +1,83 @@
 ---
-title: 'Week 8: Lab - Linear Modeling (Making Predictions)'
+title: 'Module 08 | Correlation Analysis'
 author: 'usfeleff'
 date: '2021-03-07'
 output: html_document
 ---
 
+post for this file is at:
+https://thestorythusr.wordpress.com/2021/03/07/visual-analytics-correlation/
+
 ---
-```{r, "mtcars"}
+```{r, "mtcars plot loop"}
+library(ggplot2)
 myCars <- mtcars
-str(mtcars)
+# str(mtcars)
+descriptiveNames <- c("mpg", "numCylinders", "displacement", "hp",
+                      "rearAxleRatio", "weight", "quarterMileTime",
+                      "straightOrVEngine", "transmission", "numGears",
+                      "numCarbs")
+colnames(myCars) <- descriptiveNames
+
+for (i in 1:11) {
+  
+  if (i != 11) {
+  for (j in (i+1):11) {
+  
+  plot(myCars[,i] ~ myCars[,j], 
+       xlab=names(myCars)[j], ylab=names(myCars)[i])
+    abline(lm(myCars[,i] ~ myCars[,j]))
+  }
+  }
+}
+
+
+
 ```
+
+```{r, "ggplot"}
+ggplot(myCars, aes(x=hp, y=mpg, color=displacement)) +
+  geom_point()
+
+ggplot(myCars, aes(x=hp, y=mpg, size=displacement)) +
+  geom_point()
+
+ggplot(myCars, aes(x=hp, y=mpg, size=displacement, color=weight)) +
+  geom_point()
+
+ggplot(myCars, aes(x=hp, y=mpg)) +
+  geom_point() +
+  geom_smooth(method="lm", formula=y ~ x)
+
+```
+```{r, "3d plot"}
+
+# tutorial on plot3D here:
+# http://www.sthda.com/english/wiki/impressive-package-for-3d-and-4d-graph-r-software-and-data-visualization
+
+
+library(plot3D)
+# makes for easier typing down below
+x<-myCars$hp
+y<-myCars$displacement
+z<-myCars$mpg
+
+#c calculate the regression model
+fit <- lm(z ~ x + y)
+
+grid.lines = 26
+x.pred <- seq(min(x), max(x), length.out = grid.lines)
+y.pred <- seq(min(y), max(y), length.out = grid.lines)
+xy <- expand.grid( x = x.pred, y = y.pred)
+z.pred <- matrix(predict(fit, newdata = xy), 
+                 nrow = grid.lines, ncol = grid.lines)
+
+
+# scatter plot with regression plane
+scatter3D(x, y, z, pch = 18, cex = 2, 
+    theta = 30, phi = 30, ticktype = "detailed",
+    xlab = "horsepower", ylab = "displacement", zlab = "mpg",  
+    surf = list(x = x.pred, y = y.pred, z = z.pred,  
+    facets = NA), main = "mtcars")
+```
+
